Pagination faults fixed in admin-panel/_campaign.html

--- a/src/main/resources/templates/admin_panel/_campaign.html
+++ b/src/main/resources/templates/admin_panel/_campaign.html
@@ -65,17 +65,17 @@
 
                     <div class="row">
                         <div class="col-md-12">
-                        <div class="login-text p-b-10" style="color: black;">
-                            Category
-                        </div>
-                        <select name="campaign_update_categories"
-                                id="new_campaign_categories" multiple="multiple"
-                                require="required">
-                            <option th:each="category : ${categoryService.getAllByCategory('Book')}"
-                                    th:value="${category.getName()}"
-                                    th:text="${category.getName()}">category
-                            </option>
-                        </select>
+                            <div class="login-text p-b-10" style="color: black;">
+                                Category
+                            </div>
+                            <select name="campaign_update_categories"
+                                    id="new_campaign_categories" multiple="multiple"
+                                    require="required" style="display: none">
+                                <option th:each="category : ${categoryService.getAllByCategory('Book')}"
+                                        th:value="${category.getName()}"
+                                        th:text="${category.getName()}">category
+                                </option>
+                            </select>
                         </div>
                     </div>
 
@@ -217,7 +217,7 @@
                     <li th:style="${currentPage == 1} ? 'display:none'">
                         <a th:href="@{/admin-panel#campaign(size=${campaignPage.size}, page=${currentPage - 1})}"
                            aria-label="Previous" title="Previous Page" rel="tooltip">
-                            <i class="fa fa-angle-left" style="font-size:24px; color: #fbaa1d; font-weight: bold;"></i>
+                            <i class="pagination_arrow fa fa-angle-left"></i>
                         </a>
                     </li>
 
@@ -230,17 +230,18 @@
                         </a>
                     </li>
 
-                    <li th:if="${currentPage - 3 > 1}"
-                        style="color: #fbaa1d; pointer-events:none; background-color: transparent;">...</li>
+                   <li th:if="${currentPage - 3 > 1}" class="pagination_dots">...</li>
 
                 <!-- Pages -->
-                    <li th:if="${campaignPage.totalPages > 2}"
-                        th:each="i : ${#numbers.sequence(currentPage - 2 > 1 ? currentPage - 2 : 2
+                     <li th:if="${campaignPage.totalPages > 2}"
+                         th:each="i : ${#numbers.sequence(currentPage - 2 > 1 ? currentPage - 2 : 2
                                         , campaignPage.totalPages > 2 + currentPage ? currentPage + 2 : campaignPage.totalPages - 1, 1)}"
-                        th:class="${currentPage == i} ? 'active'">
+                         th:class="${currentPage == i} ? 'active'">
+                        <a th:href="@{/admin-panel#campaign(size=${campaignPage.size}, page=${i})}"
+                           th:text="${i}" th:title="${'Page '+ i}" style="color: #fbaa1d;"></a>
+                    </li>
 
-                    <li th:if="${currentPage + 3 < campaignPage.totalPages}"
-                        style="color: #fbaa1d; pointer-events:none; background-color: transparent;">...</li>
+                    <li th:if="${currentPage + 3 < campaignPage.totalPages}" class="pagination_dots">...</li>
 
                 <!-- Last page -->
                     <li th:if="${campaignPage.totalPages > 1}"
@@ -255,7 +256,7 @@
                     <li th:style="${currentPage == campaignPage.totalPages} ? 'display:none'">
                         <a th:href="@{/admin-panel#campaign(size=${campaignPage.size}, page=${currentPage + 1})}"
                            aria-label="Next" title="Next Page" rel="tooltip">
-                            <i class="fa fa-angle-right" style="font-size:24px; color: #fbaa1d; font-weight: bold;"></i>
+                            <i class="pagination_arrow fa fa-angle-right"></i>
                         </a>
                     </li>
 
@@ -273,19 +274,18 @@
 <script>
 
     $('#new_campaign_button').click(function (event) {
-        var x=document.getElementById("new_campaign_categories");
-        var category =[];
+        var x = document.getElementById("new_campaign_categories");
+        var category = [];
         for (var i = 0; i < x.options.length; i++) {
-            if(x.options[i].selected===true ){
+            if (x.options[i].selected === true) {
                 category.push(x.options[i].value);
             }
         }
         console.log(category.length);
-        var ctg =String(category[0]);
-        for(var j=1;j<category.length;j++)
-        {
-            ctg+=("-");
-            ctg+=(String(category[j]));
+        var ctg = String(category[0]);
+        for (var j = 1; j < category.length; j++) {
+            ctg += ("-");
+            ctg += (String(category[j]));
         }
         console.log(ctg);
         var ret = {
@@ -295,7 +295,7 @@
             startDate: $('#campaign_start_date').val(),
             endDate: $('#campaign_end_date').val(),
             productType: $('#category_product_type option:selected').val(),
-            ctg:ctg
+            ctg: ctg
 
         };
 
@@ -334,6 +334,7 @@
         return true;
     }
 </script>
+
 
 <script th:src="@{/static/js/login.js}"></script>
 <script th:src="@{/static/js/input-mask.js}"></script>
