--- a/src/main/resources/templates/admin_panel/_hotList.html
+++ b/src/main/resources/templates/admin_panel/_hotList.html
@@ -229,9 +229,9 @@
 
                 <!-- Previous button -->
                     <li th:style="${currentPage == 1} ? 'display:none'">
-                        <a th:href="@{/admin-hotListPage#hotList(size=${hotListPage.size}, page=${currentPage - 1})}"
+                        <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${currentPage - 1})}"
                            aria-label="Previous" title="Previous Page" rel="tooltip">
-                            <i class="fa fa-angle-left" style="font-size:24px; color: #fbaa1d; font-weight: bold;"></i>
+                            <i class="pagination_arrow fa fa-angle-left"></i>
                         </a>
                     </li>
 
@@ -244,17 +244,18 @@
                         </a>
                     </li>
 
-                    <li th:if="${currentPage - 3 > 1}"
-                        style="color: #fbaa1d; pointer-events:none; background-color: transparent;">...</li>
+                    <li th:if="${currentPage - 3 > 1}" class="pagination_dots">...</li>
 
                 <!-- Pages -->
                     <li th:if="${hotListPage.totalPages > 2}"
                         th:each="i : ${#numbers.sequence(currentPage - 2 > 1 ? currentPage - 2 : 2
                                         , hotListPage.totalPages > 2 + currentPage ? currentPage + 2 : hotListPage.totalPages - 1, 1)}"
                         th:class="${currentPage == i} ? 'active'">
+                        <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${i})}"
+                           th:text="${i}" th:title="${'Page '+ i}" style="color: #fbaa1d;"></a>
+                    </li>
 
-                    <li th:if="${currentPage + 3 < hotListPage.totalPages}"
-                        style="color: #fbaa1d; pointer-events:none; background-color: transparent;">...</li>
+                    <li th:if="${currentPage + 3 < hotListPage.totalPages}" class="pagination_dots">...</li>
 
                 <!-- Last page -->
                     <li th:if="${hotListPage.totalPages > 1}"
@@ -269,7 +270,7 @@
                     <li th:style="${currentPage == hotListPage.totalPages} ? 'display:none'">
                         <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${currentPage + 1})}"
                            aria-label="Next" title="Next Page" rel="tooltip">
-                            <i class="fa fa-angle-right" style="font-size:24px; color: #fbaa1d; font-weight: bold;"></i>
+                            <i class="pagination_arrow fa fa-angle-right"></i>
                         </a>
                     </li>
 
@@ -290,19 +291,18 @@
     $('#new_hotList_button').click(function (event) {
 
 
-        var x=document.getElementById("new_hot_list_categories");
+        var x = document.getElementById("new_hot_list_categories");
         var category = [];
         for (var i = 0; i < x.options.length; i++) {
-            if(x.options[i].selected===true ){
+            if (x.options[i].selected === true) {
                 category.push(x.options[i].value);
             }
         }
         console.log(category);
-        var ctg =String(category[0]);
-        for(var j=1;j<category.length;j++)
-        {
-            ctg+=("-");
-            ctg+=(String(category[j]));
+        var ctg = String(category[0]);
+        for (var j = 1; j < category.length; j++) {
+            ctg += ("-");
+            ctg += (String(category[j]));
         }
         console.log(ctg);
         var ret = {
@@ -313,7 +313,7 @@
             productType: $('#category_product_type option:selected').val(),
             startTime: $('#new_hot_list_start_time').val(),
             endTime: $('#new_hot_list_end_time').val(),
-            ctg:ctg
+            ctg: ctg
 
 
         };
